# avalon

./: .gitignore  Cargo.toml  ambient-visuals.bundle  plan.txt
asset_generator/: Cargo.toml
asset_generator/src/: main.rs
assets/: voxel-textures.bundle
assets/editor/: grid.frag  grid.vert
assets/shaders/: bloom.frag  clear_3d.comp  downsample.comp  gamma_correction.frag  pp_combiner.frag  reinhard_tonemap.frag  upscale.comp
avalon/: Cargo.toml
avalon/src/: asset_library.rs  debug.rs  ecs.rs  engine.rs  event.rs  gpu_buffer.rs  input.rs  lib.rs  model.rs  render_engine.rs  shader.rs  texture.rs  transform.rs  viewport.rs
avalon/src/asset_library/: load.rs
avalon/src/engine/: event.rs
avalon/src/event/: channel.rs  derives.rs  entry.rs  error.rs
avalon/src/gpu_buffer/: storage.rs
avalon/src/input/: action.rs  api.rs  context.rs  controller.rs  event.rs  keyboard.rs  layer.rs  map.rs  mouse.rs
avalon/src/input/api/: axis.rs  button.rs  cursor.rs  input.rs
avalon/src/shader/: error.rs  program.rs  uniform.rs
avalon/src/texture/: algorithms.rs  cpu.rs  data.rs  gpu.rs  texture_2d.rs  texture_3d.rs
avalon/src/texture/gpu/: texture_2d.rs  texture_3d.rs
avalon/src/viewport/: builder.rs  depth_options.rs  error.rs
avalon_asset/: Cargo.toml
avalon_asset/src/: asset.rs  bundle.rs  error.rs  lib.rs  model.rs  packed.rs  shader.rs  text.rs  texture.rs
avalon_asset/src/asset/: serialization.rs
avalon_asset/src/model/: ngon.rs  packed.rs
avalon_gl/: Cargo.toml
avalon_math/: Cargo.toml
avalon_math/benches/: vector4.rs
game/: Cargo.toml
(+67 files in other folders)
