[package]
name = "avalon"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned-vec = "0.6.1"
bitfield = "0.17.0"
bitflags = "2.6.0"
gl = "0.14.0"
image = "0.25.5"
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"
ringbuffer = "0.15.0"
sdl2 = { version = "0.37.0", features = ["static-link", "bundled"] }
thiserror = "2.0.9"

