[package]
name = "avalon"
version = "0.1.0"
edition = "2021"

[dependencies]
aligned-vec = "0.6.1"
avalon_asset = { path = "../avalon_asset", features = ["read"] }
bitfield = "0.17.0"
bitflags = "2.6.0"
bytemuck = "1.21.0"
enumflags2 = "0.7.11"
gl = "0.14.0"
glob = "0.3.2"
image = "0.25.5"
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"
ringbuffer = "0.15.0"
sdl2 = { version = "0.37.0", features = ["static-link", "bundled"] }
thiserror = "2.0.9"

