[package]
name = "avalon_asset"
version = "0.1.0"
edition = "2024"

[features]
write = []
read = []

[dependencies]
chrono = "0.4.39"
miniserde = "0.1.41"
obj-rs = "0.7.4"
thiserror = "2.0.11"
uuid = { version = "1.12.0", features = ["v4", "fast-rng"] }
zip = { version = "=4.0.0", features = ["bzip2"] }
